# nixpkgs-inspector

./: .gitignore  flake.nix  format-to-pyproject.json  index.json  result  result-1  result-2
.github/workflows/: hourly-results.yaml  manual-script-run.yaml  manual-tracking-automation.yaml  tracking-automation.yaml
ci/: build_index.py
format-to-pyproject/: format-to-pyproject-comment-01.md  format-to-pyproject-comment-02.md  format-to-pyproject-comment-03.md  format-to-pyproject-index.md
invalid-unstable-version-scheme/: invalid-unstable-version-scheme-comment-01.md  invalid-unstable-version-scheme-index.md
lib/: default.nix  eval.nix  nixpkgs-default-config.nix  package-with.nix
lib/python/: nipylib.py
scripts/broken-changelogs/: default.nix  post-eval.py
scripts/description-format/: default.nix
scripts/find-top-level-env-vars/: default.nix  expose-verbatim-attrs.patch
scripts/format-to-pyproject/: README.md  collect-packages.nix  collect.nix  config.toml  default.nix  entry.py  post-eval.py
scripts/invalid-unstable-version-scheme/: default.nix
tracking-automation/: package.nix  pyproject.toml
tracking-automation/nix/: check.nix  collect.nix
tracking-automation/src/tracking_automation/: __main__.py  attributor.py  engine.py  github.py  model.py  nixpkgs.py  render.py  universe.py
tracking-automation/tests/: test_offline.py
